# pwcpp

./: Doxyfile  LICENSE  README.md  meson.build
examples/: meson.build  parameters.cpp  parse_midi.cpp  property.cpp  spa_debug_input.cpp
include/ftest/: count_calls.h
include/oscpp/: client.hpp
include/oscpp/detail/: stream.hpp
include/pwcpp/: buffer.h  error.h
include/pwcpp/filter/: app.h  app_builder.h  filter_port.h  parameter.h  parameter_collection.h  port.h  property_def.h
include/pwcpp/midi/: control_change.h  message.h  note.h  parse_midi.h
include/pwcpp/osc/: parse_osc.h  write_osc.h
include/pwcpp/property/: parameters_builder.h  parameters_property.h  property.h
include/pwcpp/spa/pod/: make_props_pod.h  utils.h
test/: meson.build  test_buffer.cpp  test_filter_app.cpp  test_filter_app_builder.cpp  test_filter_port.cpp  test_make_props_pod.cpp  test_parameter_collection.cpp
