executable(
  'spa_debug_input',
  'spa_debug_input.cpp',
  dependencies: [pipewire_dep],
  include_directories: [include_directory])

executable(
  'property',
  'property.cpp',
  dependencies: [pipewire_dep],
  include_directories: [include_directory])

executable(
  'parameters',
  'parameters.cpp',
  dependencies: [pipewire_dep],
  include_directories: [include_directory])
